--- a/BookShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/BookShop.Web/app/components/product_categories/productCategoryListView.html
@@ -3,13 +3,13 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Danh Muc San Pham</h1>
+                <h1>Danh Mục Sản Phẩm</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Trang chu</a></li>
-                    <li class="breadcrumb-item"><a href="#">San pham</a></li>
-                    <li class="breadcrumb-item active">Danh sach danh muc</li>
+                    <li class="breadcrumb-item"><a href="#">Trang Chủ</a></li>
+                    <li class="breadcrumb-item"><a href="#">Sản phẩm</a></li>
+                    <li class="breadcrumb-item active">Danh mục sản phẩm</li>
                 </ol>
             </div>
         </div>
@@ -22,7 +22,7 @@
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">Danh Muc San Pham</h3>
+            <h3 class="card-title">Danh Mục Sản Phẩm</h3>
 
             <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
@@ -35,27 +35,38 @@
         </div>
         <!--Than -->
         <div class="card-body">
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th style="width: 10px">ID</th>
-                        <th>Ten Danh Muc</th>
-                        <th style="width: 20%">Ngay Tao</th>
-                        <th style="width: 10%">Trang Thai</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="listproduct in productCategories">
-                        <td>{{listproduct.ID}}.</td>
-                        <td>{{listproduct.NameCategory}}</td>
-                        <td>
-                           {{listproduct.CreateDate}}
-                        </td>
-                        <td><span class="badge bg-danger">{{listproduct.Status}}</span></td>
-                    </tr>
-                 
-                </tbody>
-            </table>
+            <div class="row">
+                <div class="col-md-12">
+                    <table class="table table-hover table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th style="width: 5%">ID</th>
+                                <th style="width: 50%">Tên Danh Mục</th>
+                                <th style="width: 20%">Ngày Tạo</th>
+                                <th style="width: 10%">Trạng Thái</th>
+                                <th style="width: 10%">Thao tác</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="listproduct in productCategories">
+                                <td>{{listproduct.ID}}.</td>
+                                <td>{{listproduct.NameCategory}}</td>
+                                <td>
+                                    {{listproduct.CreateDate| date:'dd/MM/yyyy hh:mm:ss'}}
+                                </td>
+                                <td>
+                                    <span ng-class="{'badge bg-danger':listproduct.Status==false,'badge bg-green':listproduct.Status==true}">{{listproduct.Status | statusFilter}}</span>
+                                </td>
+                                <td>
+                                    <button class="btn btn-sm btn-primary"><i class="fa fa-pencil-alt"></i></button>
+                                    <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+                                </td>
+                            </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
         <!-- /.card-body -->
         <div class="card-footer">
