paging for list

--- a/BookShop.Web/Views/Admin/Index.cshtml
+++ b/BookShop.Web/Views/Admin/Index.cshtml
@@ -276,6 +276,7 @@
     <script src="~/app/Shared/modules/bookshop.common.js"></script>
     <script src="~/app/Shared/filter/statusFilter.js"></script>
     <script src="~/app/Shared/service/apiService.js"></script>
+    <script src="~/app/Shared/directives/pagerDirective.js"></script>
     <script src="~/app/app.js"></script>
     <script src="~/app/components/product_categories/productCategory.module.js"></script>
     <script src="~/app/components/product_categories/productCategoryListController.js"></script>
