--- a/BookShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/BookShop.Web/app/components/product_categories/productCategoryListView.html
@@ -36,6 +36,17 @@
         <!--Than -->
         <div class="card-body">
             <div class="row">
+                <div class="col-md-7">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <button type="button" class="btn btn-default" ng-click="searchProductCategory()">Tìm kiếm</button>
+                        </div>
+                        <!-- /btn-group -->
+                        <input type="text" class="form-control" ng-model="keyword" placeholder="Từ khóa...">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-md-12">
                     <table class="table table-hover table-bordered table-striped">
                         <thead>
@@ -47,23 +58,25 @@
                                 <th style="width: 10%">Thao tác</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr ng-repeat="listproduct in productCategories">
-                                <td>{{listproduct.ID}}.</td>
-                                <td>{{listproduct.NameCategory}}</td>
-                                <td>
-                                    {{listproduct.CreateDate| date:'dd/MM/yyyy hh:mm:ss'}}
-                                </td>
-                                <td>
-                                    <span ng-class="{'badge bg-danger':listproduct.Status==false,'badge bg-green':listproduct.Status==true}">{{listproduct.Status | statusFilter}}</span>
-                                </td>
-                                <td>
-                                    <button class="btn btn-sm btn-primary"><i class="fa fa-pencil-alt"></i></button>
-                                    <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
-                                </td>
+                        <tr ng-repeat="listproduct in productCategories">
+                            <td>{{listproduct.ID}}.</td>
+                            <td>{{listproduct.NameCategory}}</td>
+                            <td>
+                                {{listproduct.CreateDate| date:'dd/MM/yyyy hh:mm:ss'}}
+                            </td>
+                            <td>
+                                <span ng-class="{'badge bg-danger':listproduct.Status==false,'badge bg-green':listproduct.Status==true}">{{listproduct.Status | statusFilter}}</span>
+                            </td>
+                            <td>
+                                <button class="btn btn-sm btn-primary"><i class="fa fa-pencil-alt"></i></button>
+                                <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tfoot>
+                            <tr>
+                                <td colspan="6">Trang số: {{page+1}} - Tổng số bản ghi: {{totalCountCurrent}}</td>
                             </tr>
-
-                        </tbody>
+                        </tfoot>
                     </table>
                 </div>
             </div>
