--- a/BookShop.Web/Views/Admin/Index.cshtml
+++ b/BookShop.Web/Views/Admin/Index.cshtml
@@ -218,14 +218,14 @@
                                 <li class="nav-item">
                                     <a ui-sref="product_categories" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Danh muc san pham</p>
+                                        <p>Danh mục sản phẩm</p>
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
                                     <a ui-sref="products" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>San pham</p>
+                                        <p>Sản phẩm</p>
                                     </a>
                                 </li>
                               
@@ -281,6 +281,7 @@
     <script src="~/app/app.js"></script>
     <script src="~/app/components/product_categories/productCategory.module.js"></script>
     <script src="~/app/components/product_categories/productCategoryListController.js"></script>
+    <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
     <script src="~/app/components/products/products.module.js"></script>
     <script src="~/app/components/products/productListController.js"></script>
     <script src="~/app/components/products/productAddController.js"></script>
