--- a/BookShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/BookShop.Web/app/components/product_categories/productCategoryListView.html
@@ -32,10 +32,12 @@
                     <i class="fas fa-times"></i>
                 </button>
             </div>
+            
         </div>
         <!--Than -->
         <div class="card-body">
             <div class="row">
+                <!--Thanh tim kiếm-->
                 <div class="col-md-7">
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
@@ -44,6 +46,11 @@
                         <!-- /btn-group -->
                         <input type="text" class="form-control" ng-model="keyword" placeholder="Từ khóa...">
                     </div>
+                </div>
+
+                <!--Thêm danh mục-->
+                <div class="col-md-3">
+                    <a ui-sref="add_product_category" class="btn btn-success">Thêm mới danh mục</a>
                 </div>
             </div>
             <div class="row">
