--- a/BookShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/BookShop.Web/app/components/product_categories/productCategoryListView.html
@@ -75,7 +75,7 @@
                                 <span ng-class="{'badge bg-danger':listproduct.Status==false,'badge bg-green':listproduct.Status==true}">{{listproduct.Status | statusFilter}}</span>
                             </td>
                             <td>
-                                <button class="btn btn-sm btn-primary"><i class="fa fa-pencil-alt"></i></button>
+                                <button class="btn btn-sm btn-primary" ui-sref="edit_product_category({id:listproduct.ID})"><i class="fa fa-pencil-alt"></i></button>
                                 <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
                             </td>
                         </tr>
