--- a/BookShop.Web/Views/Admin/Index.cshtml
+++ b/BookShop.Web/Views/Admin/Index.cshtml
@@ -278,10 +278,12 @@
     <script src="~/app/Shared/service/apiService.js"></script>
     <script src="~/app/Shared/directives/pagerDirective.js"></script>
     <script src="~/app/Shared/service/notificationService.js"></script>
+    <script src="~/app/Shared/service/commonService.js"></script>
     <script src="~/app/app.js"></script>
     <script src="~/app/components/product_categories/productCategory.module.js"></script>
     <script src="~/app/components/product_categories/productCategoryListController.js"></script>
     <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
+    <script src="~/app/components/product_categories/productCategoryEditController.js"></script>
     <script src="~/app/components/products/products.module.js"></script>
     <script src="~/app/components/products/productListController.js"></script>
     <script src="~/app/components/products/productAddController.js"></script>
