--- a/BookShop.Web/app/components/product_categories/productCategoryEditView.html
+++ b/BookShop.Web/app/components/product_categories/productCategoryEditView.html
@@ -3,13 +3,13 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Thêm mới danh mục</h1>
+                <h1>Cập nhật danh mục: {{productCategory.NameCategory}}</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="#">Trang Chủ</a></li>
                     <li class="breadcrumb-item"><a href="#">Danh mục sản phẩm</a></li>
-                    <li class="breadcrumb-item active">Thêm mới danh mục</li>
+                    <li class="breadcrumb-item active">Cập nhật danh mục</li>
                 </ol>
             </div>
         </div>
@@ -31,25 +31,25 @@
                     <i class="fas fa-times"></i>
                 </button>
 
-                    <a class="btn btn-tool" ui-sref="product_categories" title="Quay lại"><i class="fas fa-arrow-left"></i></a>
+                <a class="btn btn-tool" ui-sref="product_categories" title="Quay lại"><i class="fas fa-arrow-left"></i></a>
             </div>
 
         </div>
 
 
         <div class="card-body">
-            <form novalidate name="frmAddProductCategory" role="form" ng-submit="AddProductCategory()">
+            <form novalidate name="frmEditProductCategory" role="form" ng-submit="EditProductCategory()">
                 <div class="row">
                     <div class="col-sm-9">
                         <!-- text input -->
                         <div class="form-group">
-                            <label>Tên Danh mục sản phẩm</label>
+                            <label>Tên Danh mục</label>
                             <input type="text" name="name" ng-change="GetSeoTitle()" ng-model="productCategory.NameCategory" class="form-control">
                         </div>
 
                         <div class="form-group">
                             <label>SEO</label>
-                            <input type="text" name="alias" ng-model="productCategory.Alias" class="form-control" >
+                            <input type="text" name="alias" ng-model="productCategory.Alias" class="form-control">
                         </div>
                         <div class="form-group">
                             <label>Mô tả ngắn</label>
@@ -71,19 +71,19 @@
 
                         <div class="form-group">
                             <label>Meta Keyword</label>
-                            <textarea class="form-control" name="description" ng-model="productCategory.MetaKeyWord"   rows="3" ></textarea>
+                            <textarea class="form-control" name="description" ng-model="productCategory.MetaKeyWord" rows="3"></textarea>
                         </div>
 
                         <div class="form-group">
                             <label>MetaDescription</label>
-                            <textarea class="form-control" name="description" ng-model="productCategory.MetaDescription" rows="3" ></textarea>
+                            <textarea class="form-control" name="description" ng-model="productCategory.MetaDescription" rows="3"></textarea>
                         </div>
 
                     </div>
                     <div class="col-sm-3">
                         <div class="form-group">
                             <label>Số lượng</label>
-                            <textarea class="form-control" rows="3" ></textarea>
+                            <textarea class="form-control" rows="3"></textarea>
                         </div>
 
                         <label>Thứ tự</label>
@@ -110,14 +110,14 @@
 
                         <div class="form-group">
                             <label>Danh Mục cha</label>
-                            <select class="custom-select" name="parentID"  ng-model="productCategory.ParentID" 
+                            <select class="custom-select" name="parentID" ng-model="productCategory.ParentID"
                                     ng-options="option.ID as option.NameCategory for option in parentCategories">
                                 <option value="">Chọn danh mục</option>
                             </select>
                             <input type="hidden" name="parentID" ng-model="productCategory.ParentID" />
                         </div>
 
-                        
+
 
                         <!--
                              <div class="form-group">
@@ -134,16 +134,16 @@
                                 <label class="custom-control-label" for="customSwitch3">Trạng Thái</label>
                             </div>
                         </div>
-                          
+
                         <div class="form-group">
                             <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
                                 <input type="checkbox" name="homeflag" ng-model="productCategory.HomeFlag" ng-checked="productCategory.HomeFlag" class="custom-control-input" id="customSwitch4">
                                 <label class="custom-control-label" for="customSwitch4">Hiện thị trang chủ</label>
                             </div>
-                        </div> 
-                        
-                            <button type="submit" class="btn btn-success">Lưu danh mục</button>
-                       
+                        </div>
+
+                        <button type="submit" class="btn btn-success">Cập nhật danh mục</button>
+
                     </div>
                 </div>
             </form>
