--- a/BookShop.Web/app/components/products/productEditView.html
+++ b/BookShop.Web/app/components/products/productEditView.html
@@ -56,7 +56,7 @@
                         </div>
                         <div class="form-group">
                             <label>Mô tả ngắn <span class="text-danger">(*)</span></label>
-                            <textarea class="form-control" name="description" required ng-model="product.Description" rows="3"></textarea>
+                            <textarea class="form-control" name="description" required ckeditor="ckeditorOptions" ng-model="product.Description" rows="3"></textarea>
                             <span ng-show="frmEditProduct.description.$invalid" class="text-danger">Phải nhập thông tin mô tả.</span>
                         </div>
                         <!-- Image -->
