--- a/BookShop.Web/app/components/products/productAddView.html
+++ b/BookShop.Web/app/components/products/productAddView.html
@@ -64,6 +64,8 @@
                             <textarea class="form-control" name="content" required ckeditor="ckeditorOptions" ng-model="product.Content" rows="3"></textarea>
                             <span ng-show="frmAddProduct.content.$invalid" class="text-danger">Phải nhập thông tin chi tiết sản phẩm.</span>
                         </div>
+                     
+
                         <!-- Image -->
                         <div class="form-group">
                             <label>Hình Ảnh</label>
@@ -81,6 +83,10 @@
 
                     </div>
                     <div class="col-sm-3">
+                        <div class="form-group">
+                            <label>Tags</label>
+                            <input type="text" class="form-control" name="tags" ng-model="product.Tags" rows="3" />
+                        </div>
                         <div class="form-group">
                             <label>Meta Keyword</label>
                             <input class="form-control" name="metakeyword" ng-model="product.MetaKeyWord" rows="3" />
