--- a/BookShop.Web/app/components/products/productEditView.html
+++ b/BookShop.Web/app/components/products/productEditView.html
@@ -65,6 +65,8 @@
                             <textarea class="form-control" name="content" required ckeditor="ckeditorOptions" ng-model="product.Content" rows="3"></textarea>
                             <span ng-show="frmEditProduct.content.$invalid" class="text-danger">Phải nhập thông tin chi tiết sản phẩm.</span>
                         </div>
+                       
+
                         <!-- Image -->
                         <div class="form-group">
                             <label>Hình Ảnh</label>
@@ -83,6 +85,11 @@
 
                     </div>
                     <div class="col-sm-3">
+                        <div class="form-group">
+                            <label>Tags</label>
+                            <input class="form-control" name="tags" ng-model="product.Tags" rows="3" />
+                        </div>
+
                         <div class="form-group">
                             <label>Meta Keyword</label>
                             <input class="form-control" name="metakeyword" ng-model="product.MetaKeyWord" rows="3" />
@@ -109,16 +116,7 @@
                             </div>
                         </div>
 
-                        <label>Giá khuyến mại</label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">VNĐ</span>
-                            </div>
-                            <input type="number" name="promotion" ng-model="product.Promotion" class="form-control">
-                            <div class="input-group-append">
-                                <span class="input-group-text">.00</span>
-                            </div>
-                        </div>
+                     
 
 
 
