--- a/BookShop.Web/app/components/products/productListView.html
+++ b/BookShop.Web/app/components/products/productListView.html
@@ -61,8 +61,8 @@
                             <tr>
                                 <th><input name="all" type="checkbox" ng-click="selectAll()" /></th>
                                 <th style="width: 5%">ID</th>
-                                <th style="width: 50%">Tên Sản Phẩm</th>
-                                
+                                <th style="width: 40%">Tên Sản Phẩm</th>
+                                <th style="width: 10%" >Hình ảnh</th>
                                 <th style="width: 20%">Ngày Tạo</th>
                                 <th style="width: 10%">Trạng Thái</th>
                                 <th style="width: 10%">Thao tác</th>
@@ -72,6 +72,9 @@
                             <td><input type="checkbox" ng-model="listproduct.checked" name="all" /></td>
                             <td>{{listproduct.ID}}.</td>
                             <td>{{listproduct.NameProduct}}</td>
+                            <td>
+                               <img src="{{listproduct.Images}}" width="80" height="80" alt="Lỗi ảnh" />
+                            </td>
                             <td>
                                 {{listproduct.CreateDate| date:'dd/MM/yyyy'}}
                             </td>
