--- a/BookShop.Web/app/components/products/productEditView.html
+++ b/BookShop.Web/app/components/products/productEditView.html
@@ -45,8 +45,8 @@
                         <div class="form-group">
                             <label>Tên Sản Phẩm <span class="text-danger">(*)</span></label>
                             <input type="text" required name="name" ng-maxlength="256" ng-change="GetSeoTitle()" ng-model="product.NameProduct" class="form-control">
-                            <span ng-show="frmEditProduct.name.$invalid" class="text-danger">Phải nhập tên danh mục.</span>
-                            <span ng-show="frmEditproduct.name.$error.maxlength" class="text-danger">Độ dài tên danh mục không quá 256 ký tự.</span>
+                            <span ng-show="frmEditProduct.name.$invalid" class="text-danger">Phải nhập sản phẩm.</span>
+                            <span ng-show="frmEditproduct.name.$error.maxlength" class="text-danger">Độ dài tên sản phẩm không quá 256 ký tự.</span>
                         </div>
 
                         <div class="form-group">
@@ -65,7 +65,7 @@
                             <textarea class="form-control" name="content" required ckeditor="ckeditorOptions" ng-model="product.Content" rows="3"></textarea>
                             <span ng-show="frmEditProduct.content.$invalid" class="text-danger">Phải nhập thông tin chi tiết sản phẩm.</span>
                         </div>
-                       
+
 
                         <!-- Image -->
                         <div class="form-group">
@@ -79,11 +79,24 @@
 
                             </div>
                         </div> <!-- Image -->
+                        <!-- MoreImage -->
+                        <div class="form-group">
+                            <label>Thêm ảnh</label>
+                            <div class="input-group">
+                                <div class="custom-file">
+                                    <label class="custom-file-label" ng-model="product.Images" for="exampleInputFile" ng-click="ChooseMoreImages()"></label>
+                                </div>
+                            </div>
+                            <div>
+                                <ul class="col-md-9">
+                                    <li class="list-inline float-left" ng-repeat="img in moreImages"><img ng-src="{{img}}" width="100" height="100" /></li>
+                                </ul>
+                            </div>
+                        </div> <!-- MoreImage -->
+
+                    </div><!--End row 9-->
 
 
-                       
-
-                    </div>
                     <div class="col-sm-3">
                         <div class="form-group">
                             <label>Tags</label>
@@ -100,23 +113,28 @@
                             <input class="form-control" name="metadescription" ng-model="product.MetaDescription" rows="3" />
                         </div>
 
-                        <div class="form-group">
-                            <label>Số lượng</label>
-                            <input type="number" name="quantity" ng-model="product.Quantity" class="form-control" rows="3"/>
-                        </div>
 
                         <label>Giá tiền</label>
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">VNĐ</span>
                             </div>
-                            <input type="number" name="price" value="0" ng-model="product.Price" class="form-control">
+                            <input type="number" name="price" value="0.00" ng-model="product.Price" class="form-control">
                             <div class="input-group-append">
                                 <span class="input-group-text">.00</span>
                             </div>
                         </div>
 
-                     
+                        <label>Giá khuyến mại</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">VNĐ</span>
+                            </div>
+                            <input type="number" name="promotion" value="0.00" ng-model="product.Promotion" class="form-control">
+                            <div class="input-group-append">
+                                <span class="input-group-text">.00</span>
+                            </div>
+                        </div>
 
 
 
@@ -128,7 +146,7 @@
                                 <option value="">Chọn danh mục</option>
                             </select>
                             <input type="hidden" name="parentID" ng-model="product.CategoryID" />
-                            
+
                         </div>
 
 
@@ -160,8 +178,10 @@
 
                     </div>
                 </div>
-            </form>
         </div>
+
+        </form>
+    </div>
     </div>
     <!-- /.card -->
 
